--- a/frontend/app/assets/css/scss/cartoon/helloKity.scss
+++ b/frontend/app/assets/css/scss/cartoon/helloKity.scss
@@ -189,7 +189,8 @@
             border-radius: 11px 4px 45px 45px;
             position: absolute;
             top: -31px;
-            left: 37px
+            left: 37px;
+            
         }
     }
 }
