--- a/frontend/.tmp/assets/css/cartoon/helloKity.css
+++ b/frontend/.tmp/assets/css/cartoon/helloKity.css
@@ -114,7 +114,29 @@
   border: 8px solid #000;
   border-radius: 115px 115px 115px 115px/110px 110px 80px 80px;
   position: absolute;
-  z-index: 2;
+  z-index: 3;
+}
+.kity .face:after, .kity .face:before {
+  content: '';
+  display: inline-block;
+  width: 52px;
+  height: 23px;
+  background: #fff;
+  border-radius: 89px 53px 19px 2px;
+  position: absolute;
+  top: 12px;
+  left: 6px;
+  -webkit-transform: rotate(-35deg);
+  -moz-transform: rotate(-35deg);
+  transform: rotate(-35deg);
+}
+.kity .face:before {
+  width: 61px;
+  top: 16px;
+  left: 160px;
+  -webkit-transform: rotate(35deg);
+  -moz-transform: rotate(35deg);
+  transform: rotate(35deg);
 }
 .kity .face .eyes-left, .kity .face .eyes-right {
   width: 17px;
@@ -200,16 +222,96 @@
   position: absolute;
   top: 145px;
   left: 33px;
+  z-index: 2;
 }
 .kity .kity-body:after {
   content: '';
   display: inline-block;
-  width: 75px;
-  height: 75px;
+  width: 60px;
+  height: 70px;
   border: 6px solid #000;
   background: #f54a99;
   border-radius: 11px 4px 45px 45px;
   position: absolute;
   top: -31px;
-  left: 37px;
+  left: 43px;
+}
+.kity .arm .arm-left, .kity .arm .arm-right {
+  width: 100px;
+  height: 41px;
+  background: #fff;
+  border: 8px solid #000;
+  border-radius: 40px 100px 17px 38px/35px 35px 10px 30px;
+  -webkit-transform: rotate(-25deg);
+  -moz-transform: rotate(-25deg);
+  transform: rotate(-25deg);
+  position: absolute;
+  top: 164px;
+}
+.kity .arm .arm-left:after, .kity .arm .arm-right:after {
+  content: '';
+  display: inline-block;
+  width: 40px;
+  height: 41px;
+  background: #f54a99;
+  border: 8px solid #000;
+  border-radius: 0 43px/0 20px;
+  position: absolute;
+  top: -7px;
+  left: 30px;
+}
+.kity .arm .arm-left:before, .kity .arm .arm-right:before {
+  content: '';
+  display: inline-block;
+  background: #fff;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  position: absolute;
+  top: -7px;
+  left: 8px;
+  z-index: -1;
+}
+.kity .arm .hand-left, .kity .arm .hand-right {
+  width: 25px;
+  height: 25px;
+  background: #000;
+  border-radius: 50%;
+  position: absolute;
+  left: 3px;
+  top: 175px;
+  z-index: -1;
+}
+.kity .arm .arm-left {
+  left: -2px;
+}
+.kity .arm .arm-right {
+  -webkit-transform: rotate(25deg) scaleX(-1);
+  -moz-transform: rotate(25deg) scaleX(-1);
+  transform: rotate(25deg) scaleX(-1);
+  right: 55px;
+}
+.kity .arm .hand-right {
+  left: 215px;
+}
+.kity .leg {
+  position: absolute;
+  top: 266px;
+  left: 34px;
+  width: 184px;
+}
+.kity .leg .leg-left, .kity .leg .leg-right {
+  width: 74px;
+  height: 35px;
+  background: #fff;
+  border: 8px solid #000;
+  float: left;
+}
+.kity .leg .leg-left {
+  border-right-width: 5px;
+  border-radius: 10px 0px 30px 54px/0px 8px 18px 50px;
+}
+.kity .leg .leg-right {
+  border-left-width: 5px;
+  border-radius: 0px 10px 54px 30px/8px 0px 50px 18px;
 }
