--- a/frontend/.tmp/assets/css/cartoon/helloKity.css
+++ b/frontend/.tmp/assets/css/cartoon/helloKity.css
@@ -315,3 +315,24 @@
   border-left-width: 5px;
   border-radius: 0px 10px 54px 30px/8px 0px 50px 18px;
 }
+
+.red-flower {
+  width: 60px;
+  height: 140px;
+  border-radius: 30px 2px 10px 57px/62px 0px 15px 89px;
+  background: #00a34c;
+  position: relative;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+.red-flower:after {
+  content: '';
+  display: inline-block;
+  width: 140px;
+  height: 140px;
+  border-radius: 32px 116px 123px 80px/74px 65px 59px 90px;
+  background: #fff;
+  position: absolute;
+  left: 21px;
+  top: -7px;
+}
