--- a/frontend/app/assets/css/scss/cartoon/helloKity.scss
+++ b/frontend/app/assets/css/scss/cartoon/helloKity.scss
@@ -299,5 +299,23 @@
 
 
 .red-flower{
-    
+    width: 60px;
+    height: 140px;
+    border-radius: 30px 2px 10px 57px/62px 0px 15px 89px;
+    background: #00a34c;
+    position: relative;
+    margin-left: 10px;
+    margin-bottom: 10px;
+    &:after{
+        content: '';
+        display: inline-block;
+        width: 140px;
+        height: 140px;
+        border-radius: 32px 116px 123px 80px/74px 65px 59px 90px;
+        background: #fff;
+        position: absolute;
+        left: 21px;
+        top: -7px;
+    }
+
 }
